Rename modules: lib-vk -> lib-sm; protocol-vk -> protocol-sm; parse-vk -> parse-sm

--- a/plugins/index-multipage/plugin.xml
+++ b/plugins/index-multipage/plugin.xml
@@ -13,7 +13,7 @@
 
     <requires>
         <import plugin="nutch-extensionpoints"/>
-        <import plugin="lib-vk"/>
+        <import plugin="lib-sm"/>
     </requires>
 
     <extension id="org.apache.nutch.indexer.multipage"
