--- a/pom.xml
+++ b/pom.xml
@@ -211,9 +211,9 @@
         <module>plugins/index-multipage</module>
         <module>plugins/indexer-multielastic</module>
         <module>plugins/indexer-multielastic2</module>
-        <module>plugins/lib-vk</module>
-        <module>plugins/parse-vk</module>
-        <module>plugins/protocol-vk</module>
+        <module>plugins/lib-sm</module>
+        <module>plugins/parse-sm</module>
+        <module>plugins/protocol-sm</module>
         <module>multipage</module>
         <module>smm-core</module>
         <module>smm-protocols</module>
