--- a/plugins/index-multipage/build.xml
+++ b/plugins/index-multipage/build.xml
@@ -21,13 +21,13 @@
   
   <!-- Build compilation dependencies -->
   <target name="deps-jar">
-    <ant target="jar" inheritall="false" dir="../lib-vk" />
+    <ant target="jar" inheritall="false" dir="../lib-sm" />
   </target>
 
   <!-- Add compilation dependencies to classpath -->
   <path id="plugin.deps">
     <fileset dir="${nutch.root}/build">
-      <include name="**/lib-vk/*.jar" />
+      <include name="**/lib-sm/*.jar" />
     </fileset>
   </path>
   
