--- a/plugins/indexer-multielastic/plugin.xml
+++ b/plugins/indexer-multielastic/plugin.xml
@@ -45,7 +45,7 @@
 
   <requires>
     <import plugin="nutch-extensionpoints" />
-    <import plugin="lib-vk"/>
+    <import plugin="lib-sm"/>
   </requires>
 
   <extension id="org.apache.nutch.indexer.multielastic"
