--- a/plugins/lib-sm/build.xml
+++ b/plugins/lib-sm/build.xml
@@ -15,20 +15,8 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project name="protocol-vk" default="jar-core">
+<project name="lib-sm" default="jar-core">
 
   <import file="../build-plugin.xml"/>
-
-  <!-- Build compilation dependencies -->
-  <target name="deps-jar">
-    <ant target="jar" inheritall="false" dir="../lib-vk"/>
-  </target>
-
-  <!-- Add compilation dependencies to classpath -->
-  <path id="plugin.deps">
-    <fileset dir="${nutch.root}/build">
-      <include name="**/lib-vk/*.jar" />
-    </fileset>
-  </path>
 
 </project>
