--- a/plugins/lib-sm/pom.xml
+++ b/plugins/lib-sm/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>lib-vk</artifactId>
+    <artifactId>lib-sm</artifactId>
     <packaging>jar</packaging>
 
-    <name>lib-vk</name>
+    <name>lib-sm</name>
     <description>
         Apache Nutch library for working with vk.com API
     </description>
