--- a/plugins/parse-sm/build.xml
+++ b/plugins/parse-sm/build.xml
@@ -15,8 +15,20 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project name="lib-vk" default="jar-core">
+<project name="parse-sm" default="jar-core">
 
   <import file="../build-plugin.xml"/>
+  
+  <!-- Build compilation dependencies -->
+  <target name="deps-jar">
+    <ant target="jar" inheritall="false" dir="../lib-sm" />
+  </target>
 
+  <!-- Add compilation dependencies to classpath -->
+  <path id="plugin.deps">
+    <fileset dir="${nutch.root}/build">
+      <include name="**/lib-sm/*.jar" />
+    </fileset>
+  </path>
+  
 </project>
