--- a/plugins/protocol-sm/build.xml
+++ b/plugins/protocol-sm/build.xml
@@ -15,20 +15,20 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project name="parse-vk" default="jar-core">
+<project name="protocol-sm" default="jar-core">
 
   <import file="../build-plugin.xml"/>
-  
+
   <!-- Build compilation dependencies -->
   <target name="deps-jar">
-    <ant target="jar" inheritall="false" dir="../lib-vk" />
+    <ant target="jar" inheritall="false" dir="../lib-sm"/>
   </target>
 
   <!-- Add compilation dependencies to classpath -->
   <path id="plugin.deps">
     <fileset dir="${nutch.root}/build">
-      <include name="**/lib-vk/*.jar" />
+      <include name="**/lib-sm/*.jar" />
     </fileset>
   </path>
-  
+
 </project>
