Rename modules: smm-core -> sm-core; smm-protocols -> sm-protocols

--- a/plugins/lib-sm/plugin.xml
+++ b/plugins/lib-sm/plugin.xml
@@ -33,7 +33,7 @@
         <library name="multipage-0.2.0-SNAPSHOT.jar">
             <export name="*"/>
         </library>
-        <library name="smm-core-0.2.0-SNAPSHOT.jar">
+        <library name="sm-core-0.2.0-SNAPSHOT.jar">
             <export name="*"/>
         </library>
     </runtime>
