--- a/plugins/lib-sm/ivy.xml
+++ b/plugins/lib-sm/ivy.xml
@@ -42,7 +42,7 @@
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.2.5"/>
         <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
         <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
-        <dependency org="ru.wobot" name="smm-core" rev="0.2.0-SNAPSHOT"/>
+        <dependency org="ru.wobot" name="sm-core" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
 
 </ivy-module>
