--- a/plugins/protocol-sm/plugin.xml
+++ b/plugins/protocol-sm/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin
         id="protocol-sm"
-        name="vk.com Protocol Plug-in"
+        name="Plug-in supporting social media sources"
         version="1.0.0"
         provider-name="wobot.ru">
 
