--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>smm-protocols</artifactId>
+    <artifactId>sm-core</artifactId>
     <packaging>jar</packaging>
 
-    <name>smm-protocols</name>
+    <name>sm-core</name>
     <description>
-        Library that extends the schemas URL.
+        Domain library for common social media crawling.
     </description>
 
     <parent>
@@ -16,10 +16,20 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${jodatime.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/testresources</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
