--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=UTF-8 -Djava.protocol.handler.pkgs=ru.wobot.smm.protocols</argLine>
+                    <argLine>-Dfile.encoding=UTF-8 -Djava.protocol.handler.pkgs=ru.wobot.sm.protocols</argLine>
                 </configuration>
             </plugin>
             <plugin>
