--- a/plugins/index-multipage/ivy.xml
+++ b/plugins/index-multipage/ivy.xml
@@ -36,7 +36,7 @@
     </publications>
 
     <dependencies>
-        <dependency org="ru.wobot" name="multipage" rev="0.0.1"/>
+        <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
 
 </ivy-module>
