--- a/plugins/indexer-multielastic/ivy.xml
+++ b/plugins/indexer-multielastic/ivy.xml
@@ -38,7 +38,7 @@
     <dependencies>
         <dependency org="org.elasticsearch" name="elasticsearch" rev="1.4.1"
                     conf="*->default"/>
-        <dependency org="ru.wobot" name="multipage" rev="0.0.1"/>
+        <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
 
 </ivy-module>
