--- a/plugins/indexer-multielastic2/plugin.xml
+++ b/plugins/indexer-multielastic2/plugin.xml
@@ -58,7 +58,7 @@
         <library name="asm-4.1"/>
         <library name="asm-commons-4.1.jar"/>
         <library name="gson-2.4.jar"/>
-        <library name="multipage-0.0.1.jar"/>
+        <library name="multipage-0.2.0-SNAPSHOT.jar"/>
     </runtime>
 
     <requires>
