--- a/core-libs/sm-core/pom.xml
+++ b/core-libs/sm-core/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>ru.wobot</groupId>
-        <artifactId>wonutch-plugins</artifactId>
+        <artifactId>core-libs</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
@@ -20,6 +20,22 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${jodatime.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>${commons-logging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
