--- a/plugins/lib-sm/pom.xml
+++ b/plugins/lib-sm/pom.xml
@@ -38,18 +38,13 @@
         <dependency>
             <groupId>ru.wobot</groupId>
             <artifactId>sm-protocols</artifactId>
-            <version>${project.version}</version>
-            <scope>runtime</scope>
+            <version>0.2.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ru.wobot</groupId>
             <artifactId>multipage</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
@@ -69,6 +64,16 @@
     </dependencies>
 
     <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8 -Djava.protocol.handler.pkgs=ru.wobot.sm.protocols</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+
         <sourceDirectory>src/java</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
     </build>
