Replace multiple page storage to multiple parse result.

--- a/plugins/indexer-sm-elastic-2/plugin.xml
+++ b/plugins/indexer-sm-elastic-2/plugin.xml
@@ -63,6 +63,7 @@
 
     <requires>
         <import plugin="nutch-extensionpoints"/>
+        <import plugin="lib-sm"/>
     </requires>
 
     <extension id="ru.wobot.nutch.indexwriter.sm.elastic2"
