--- a/plugins/indexer-sm-elastic-2/pom.xml
+++ b/plugins/indexer-sm-elastic-2/pom.xml
@@ -18,11 +18,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>ru.wobot</groupId>
-            <artifactId>multipage</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${es2.version}</version>
@@ -40,8 +35,9 @@
         </dependency>
         <dependency>
             <groupId>ru.wobot</groupId>
-            <artifactId>sm-core</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <artifactId>lib-sm</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
