--- a/plugins/lib-sm/plugin.xml
+++ b/plugins/lib-sm/plugin.xml
@@ -15,6 +15,9 @@
         <library name="spring-social-vkontakte-1.1.0.RELEASE.jar">
             <export name="*"/>
         </library>
+        <library name="spring-social-facebook-2.0.3.RELEASE.jar">
+            <export name="*"/>
+        </library>
         <library name="spring-social-core-1.1.4.RELEASE.jar">
             <export name="*"/>
         </library>
