--- a/plugins/lib-sm/plugin.xml
+++ b/plugins/lib-sm/plugin.xml
@@ -24,10 +24,16 @@
         <library name="spring-core-4.1.8.RELEASE.jar">
             <export name="*"/>
         </library>
-        <library name="httpclient-4.2.5.jar">
+        <library name="spring-beans-4.1.8.RELEASE.jar">
             <export name="*"/>
         </library>
-        <library name="httpcore-4.2.4.jar">
+        <library name="spring-web-4.1.8.RELEASE.jar">
+            <export name="*"/>
+        </library>
+        <library name="httpclient-4.5.1.jar">
+            <export name="*"/>
+        </library>
+        <library name="httpcore-4.4.3.jar">
             <export name="*"/>
         </library>
         <library name="jackson-databind-2.5.3.jar">
