--- a/plugins/lib-sm/plugin.xml
+++ b/plugins/lib-sm/plugin.xml
@@ -39,6 +39,9 @@
         <library name="jackson-databind-2.5.3.jar">
             <export name="*"/>
         </library>
+        <library name="joda-time-2.9.1.jar">
+            <export name="*"/>
+        </library>
         <library name="multipage-0.2.0-SNAPSHOT.jar">
             <export name="*"/>
         </library>
