Web driver fetch implemented.

--- a/plugins/indexer-multielastic/pom.xml
+++ b/plugins/indexer-multielastic/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
             <version>${hadoop.version}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
