--- a/core-libs/pom.xml
+++ b/core-libs/pom.xml
@@ -30,8 +30,9 @@
         <jodatime.version>2.9.1</jodatime.version>
         <commons-codec.version>1.10</commons-codec.version>
         <commons-logging.version>1.2</commons-logging.version>
-        <gson.version>2.4</gson.version>
+        <jackson.version>2.5.3</jackson.version>
         <hadoop.version>2.7.1</hadoop.version>
+        <guava.version>18.0</guava.version>
     </properties>
 
     <dependencies>
