--- a/plugins/lib-sm/pom.xml
+++ b/plugins/lib-sm/pom.xml
@@ -49,6 +49,11 @@
             <version>${httpclient.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
@@ -56,16 +61,6 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
-                <configuration>
-                    <argLine>-Dfile.encoding=UTF-8 -Djava.protocol.handler.pkgs=ru.wobot.sm.protocols</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-
         <sourceDirectory>src/java</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
     </build>
