--- a/plugins/lib-sm/ivy.xml
+++ b/plugins/lib-sm/ivy.xml
@@ -41,6 +41,7 @@
         <dependency org="org.springframework.social" name="spring-social-facebook" rev="2.0.3.RELEASE"/>
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.5.1"/>
         <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
+        <dependency org="org.seleniumhq.selenium" name="selenium-java" rev="2.44.0" />
         <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
         <dependency org="ru.wobot" name="sm-core" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
