--- a/plugins/protocol-sm-selenium/pom.xml
+++ b/plugins/protocol-sm-selenium/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>ru.wobot</groupId>
-            <artifactId>lib-sm-selenium</artifactId>
+            <artifactId>lib-sm</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
