--- a/plugins/indexer-sm-elastic-2/pom.xml
+++ b/plugins/indexer-sm-elastic-2/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>ru.wobot</groupId>
-            <artifactId>lib-sm</artifactId>
+            <artifactId>sm-core</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
