Redirects moved to FbFetcher.

--- a/plugins/protocol-sm-selenium/build.xml
+++ b/plugins/protocol-sm-selenium/build.xml
@@ -15,21 +15,19 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project name="protocol-selenium" default="jar-core">
+<project name="protocol-sm-selenium" default="jar-core">
 
   <import file="../build-plugin.xml"/>
 
   <!-- Build compilation dependencies -->
   <target name="deps-jar">
-    <ant target="jar" inheritall="false" dir="../lib-http"/>
-    <ant target="jar" inheritall="false" dir="../lib-selenium"/>
+    <ant target="jar" inheritall="false" dir="../lib-sm"/>
   </target>
 
   <!-- Add compilation dependencies to classpath -->
   <path id="plugin.deps">
     <fileset dir="${nutch.root}/build">
-      <include name="**/lib-http/*.jar" />
-      <include name="**/lib-selenium/*.jar" />
+      <include name="**/lib-sm/*.jar" />
     </fileset>
   </path>
 
