--- a/plugins/parse-fb/pom.xml
+++ b/plugins/parse-fb/pom.xml
@@ -22,9 +22,13 @@
     <dependencies>
         <dependency>
             <groupId>ru.wobot</groupId>
-            <artifactId>lib-sm</artifactId>
+            <artifactId>sm-core</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
         </dependency>
     </dependencies>
 
