--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <ssfb.version>2.0.3.RELEASE</ssfb.version>
         <selenium.version>2.52.0</selenium.version>
         <phantomjs.version>1.2.1</phantomjs.version>
+        <jsoup.version>1.8.3</jsoup.version>
     </properties>
 
     <dependencies>
