Facebook fetching improved.

--- a/plugins/parse-fb/ivy.xml
+++ b/plugins/parse-fb/ivy.xml
@@ -36,6 +36,8 @@
   </publications>
 
   <dependencies>
+    <dependency org="org.jsoup" name="jsoup" rev="1.8.3"
+                conf="*->default"/>
   </dependencies>
   
 </ivy-module>
