--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,7 @@
         <module>plugins/indexer-multielastic</module>
         <module>plugins/indexer-multielastic2</module>
         <module>plugins/indexer-sm-elastic-2</module>
+        <module>plugins/indexer-sm-hbase</module>
         <module>plugins/lib-sm</module>
         <module>plugins/parse-sm</module>
         <module>plugins/parse-fb</module>
