--- a/plugins/indexer-sm-hbase/plugin.xml
+++ b/plugins/indexer-sm-hbase/plugin.xml
@@ -23,54 +23,27 @@
             <export name="*"/>
         </library>
 
-        <library name="elasticsearch-2.1.0.jar"/>
-        <library name="jackson-core-2.6.2.jar"/>
-        <library name="lucene-core-5.3.1.jar"/>
-        <library name="jackson-dataformat-smile-2.6.2.jar"/>
-        <library name="jackson-dataformat-yaml-2.6.2.jar"/>
-        <library name="jackson-dataformat-cbor-2.6.2.jar"/>
-        <library name="netty-3.10.5.Final.jar"/>
-        <library name="compress-lzf-1.0.2.jar"/>
-        <library name="t-digest-3.0.jar"/>
-        <library name="HdrHistogram-2.1.6.jar"/>
-        <library name="commons-cli-1.3.1.jar"/>
-        <library name="jsr166e-1.1.0.jar"/>
-        <library name="lucene-sandbox-5.3.1.jar"/>
-        <library name="lucene-backward-codecs-5.3.1.jar"/>
-        <library name="lucene-misc-5.3.1.jar"/>
-        <library name="lucene-analyzers-common-5.3.1.jar"/>
-        <library name="lucene-grouping-5.3.1.jar"/>
-        <library name="lucene-queries-5.3.1.jar"/>
-        <library name="lucene-spatial3d-5.3.1.jar"/>
-        <library name="spatial4j-0.4.1.jar"/>
-        <library name="snakeyaml-1.15.jar"/>
-        <library name="lucene-memory-5.3.1.jar"/>
-        <library name="lucene-highlighter-5.3.1.jar"/>
-        <library name="lucene-queryparser-5.3.1.jar"/>
-        <library name="lucene-suggest-5.3.1.jar"/>
-        <library name="lucene-join-5.3.1.jar"/>
-        <library name="lucene-spatial-5.3.1.jar"/>
-        <library name="guava-18.0.jar"/>
-        <library name="hppc-0.7.1.jar"/>
-        <library name="joda-time-2.8.2.jar"/>
-        <library name="hamcrest-core-1.3.jar"/>
-        <library name="antlr-runtime-3.5.jar"/>
-        <library name="asm-4.1"/>
-        <library name="asm-commons-4.1.jar"/>
         <library name="gson-2.4.jar"/>
-        <library name="multipage-0.2.0-SNAPSHOT.jar"/>
+        <library name="sm-core-0.2.0-SNAPSHOT.jar"/>
+        <!--<library name="hadoop-common-2.5.1.jar"/>-->
+        <library name="hbase-common-1.2.0.jar"/>
+        <library name="hbase-client-1.2.0.jar"/>
+        <library name="hbase-protocol-1.2.0.jar"/>
+        <library name="zookeeper-3.4.6.jar"/>
+        <library name="htrace-core-3.1.0-incubating.jar"/>
+        <library name="netty-all-4.0.23.Final.jar"/>
+        <library name="metrics-core-2.2.0.jar"/>
     </runtime>
 
     <requires>
         <import plugin="nutch-extensionpoints"/>
-        <import plugin="lib-sm"/>
     </requires>
 
     <extension id="ru.wobot.nutch.indexwriter.sm.hbase"
                name="Index Writer used for indexing social media data in HBase"
                point="org.apache.nutch.indexer.IndexWriter">
         <implementation id="SocialMedia-To-HBase-IndexWriter"
-                        class="ru.wobot.nutch.indexwriter.sm.HBaseIndexWriter"/>
+                        class="ru.wobot.nutch.indexwriter.sm.hbase.IndexWriter"/>
     </extension>
 
 </plugin>
