--- a/plugins/lib-sm/pom.xml
+++ b/plugins/lib-sm/pom.xml
@@ -71,9 +71,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.lightbody.bmp</groupId>
-            <artifactId>browsermob-core-littleproxy</artifactId>
-            <version>2.1.0-beta-4</version>
+            <groupId>com.github.detro</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 
