--- a/plugins/lib-sm/ivy.xml
+++ b/plugins/lib-sm/ivy.xml
@@ -43,6 +43,8 @@
         <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
         <dependency org="org.seleniumhq.selenium" name="selenium-java" rev="2.44.0" />
         <dependency org="com.codeborne" name="phantomjsdriver" rev="1.2.1" />
+        <dependency org="langdetect" name="langdetect" rev="1.0" />
+        <dependency org="net.arnx" name="jsonic" rev="1.2.7" />
         <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
         <dependency org="ru.wobot" name="sm-core" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
