--- a/plugins/lib-sm/pom.xml
+++ b/plugins/lib-sm/pom.xml
@@ -75,6 +75,16 @@
             <artifactId>phantomjsdriver</artifactId>
             <version>${phantomjs.version}</version>
         </dependency>
+        <dependency>
+            <groupId>langdetect</groupId>
+            <artifactId>langdetect</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.arnx</groupId>
+            <artifactId>jsonic</artifactId>
+            <version>1.2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
